增加加载页

--- a/src/metro/home.html
+++ b/src/metro/home.html
@@ -27,68 +27,136 @@
 </head>
   <body>
     <div class="container">
-      <!-- 云 -->
-      <div class="lamp">
-        <img src="./images/lamp.png" />
+      <!-- 加载页 -->
+      <div class="page loading">
+        <div class="firelantern">
+          <img src="./images/firelantern.png" />
+        </div>
+        <div class="confetti1">
+            <img src="./images/confetti1.png" />
+        </div>
+        <div class="snowmanDog">
+            <img src="./images/snowmanDog.png" />
+        </div>
+        <div class="confetti2">
+            <img src="./images/confetti2.png" />
+        </div>
+        <div class="word1">
+            <img src="./images/word1.png" />
+        </div>
+        <div class="television">
+            <img src="./images/television.png" />
+            <img src="./images/play.png" class="play" id="play" />
+        </div>
+        <div class="loadingBox">
+          <div class="loadingGroup">
+            <div class="loadingBg">
+                <img src="./images/loadingBg.png" />
+            </div>
+            <div class="progressbar" id="progressbar" >
+                <img src="./images/progressbar.png" />
+            </div>
+          </div>
+          <div class="progressValue" id="progressValue" >0%</div>
+        </div>
       </div>
-      <!-- 烟花 -->
-      <div class="fireworks">
-        <img src="./images/fireworks.png" />
+      <!-- 视频 -->
+      <div class="page media">
+          <video src="./video/video.mp4" preload class="video" id="video" ></video>
       </div>
-      <!-- 新年字 -->
-      <div class="newyear">
-        <img src="./images/newyear.png" />
+      <!-- 首页 -->
+      <div class="page page1">
+        <!-- 云 -->
+        <div class="lamp">
+          <img src="./images/lamp.png" />
+        </div>
+        <!-- 烟花 -->
+        <div class="fireworks">
+          <img src="./images/fireworks.png" />
+        </div>
+        <!-- 新年字 -->
+        <div class="newyear">
+          <img src="./images/newyear.png" />
+        </div>
+        <!-- 云1 -->
+        <div class="cloud1">
+          <img src="./images/cloud1.png" />
+        </div>
+        <!-- 云2 -->
+        <div class="cloud2">
+          <img src="./images/cloud2.png" />
+        </div>
+        <!-- 雪花 -->
+        <div class="snowflake">
+          <img src="./images/snowflake.png" />
+        </div>
+        <!-- 雪 -->
+        <div class="snow">
+          <img src="./images/snow.png" />
+        </div>
+        <!-- 鞭炮1 -->
+        <div class="firecrackers1">
+          <img src="./images/firecrackers1.png" />
+        </div>
+        <!-- 鞭炮2 -->
+        <div class="firecrackers2">
+          <img src="./images/firecrackers2.png" />
+        </div>
+        <!-- 红包 -->
+        <div class="redbag">
+          <img src="./images/redbag.png" />
+        </div>
+        <!-- 狗1 -->
+        <div class="dog1">
+          <img src="./images/dog1.png" />
+        </div>
+        <!-- 抽签 -->
+        <div class="draw">
+          <img src="./images/draw1.png" class="draw1" />
+          <img src="./images/projection.png" class="projection" />
+        </div>
+        <!-- 狗2 -->
+        <div class="dog2">
+          <img src="./images/dog2.png" />
+          <img src="./images/acer.png" class="acer" />
+        </div>
+        <!-- 雪人 -->
+        <div class="snowman">
+          <img src="./images/snowman.png" />
+        </div>
+        <!-- 摇一摇 -->
+        <div class="shake">
+          <img src="./images/shake.png" class="shakeHand" />
+        </div>
       </div>
-      <!-- 云1 -->
-      <div class="cloud1">
-        <img src="./images/cloud1.png" />
-      </div>
-      <!-- 云2 -->
-      <div class="cloud2">
-        <img src="./images/cloud2.png" />
-      </div>
-      <!-- 雪花 -->
-      <div class="snowflake">
-        <img src="./images/snowflake.png" />
-      </div>
-      <!-- 雪 -->
-      <div class="snow">
-        <img src="./images/snow.png" />
-      </div>
-      <!-- 鞭炮1 -->
-      <div class="firecrackers1">
-        <img src="./images/firecrackers1.png" />
-      </div>
-      <!-- 鞭炮2 -->
-      <div class="firecrackers2">
-        <img src="./images/firecrackers2.png" />
-      </div>
-      <!-- 红包 -->
-      <div class="redbag">
-        <img src="./images/redbag.png" />
-      </div>
-      <!-- 狗1 -->
-      <div class="dog1">
-        <img src="./images/dog1.png" />
-      </div>
-      <!-- 抽签 -->
-      <div class="draw">
-        <img src="./images/draw1.png" class="draw1" />
-        <img src="./images/projection.png" class="projection" />
-      </div>
-      <!-- 狗2 -->
-      <div class="dog2">
-        <img src="./images/dog2.png" />
-        <img src="./images/acer.png" class="acer" />
-      </div>
-      <!-- 雪人 -->
-      <div class="snowman">
-        <img src="./images/snowman.png" />
-      </div>
-      <!-- 摇一摇 -->
-      <div class="shake">
-        <img src="./images/shake.png" class="shakeHand" />
+      <!-- 签文 -->
+      <div class="page page2">
+        <div class="signBox">
+          <img src="./images/signBg.png" class="signBg" />
+          <div class="signTitle">
+              <img src="./images/signTitle.png" />
+          </div>
+          <div class="keyword">
+              <img src="./images/keyword1.png" />
+          </div>
+          <div class="guide">
+            <div class="tip">
+                <img src="./images/tip.png" />
+            </div>
+            <div class="btns">
+              <img src="./images/btn1.png" />
+              <img src="./images/btn2.png" />
+            </div>
+          </div>
+          <div class="qrcodes">
+              <img src="./images/qrcode.png" class="qrcode" />
+              <img src="./images/word2.png" class="word2" />
+          </div>
+        </div>
       </div>
     </div>
+    <script src="./js/jquery-1.11.0.min.js"></script>
+    <script src="./js/preloadjs-0.6.2.min.js"></script>
+    <script src="./js/home.js"></script>
   </body>
 </html>
