修正声音播放

--- a/src/metro/home.html
+++ b/src/metro/home.html
@@ -62,9 +62,12 @@
           <div class="progressValue" id="progressValue" >0%</div>
         </div>
       </div>
-      <!-- 视频 -->
+      <!-- 音频视频 -->
       <div class="page media">
           <video src="./media/video.mov" preload class="video" id="video" ></video>
+          <audio preload class="shakingAudio" id="shakingAudio" >
+            <source src="./media/shake.mp3" type="audio/mpeg">
+          </audio>
       </div>
       <!-- 首页 -->
       <div class="page page1">
@@ -130,7 +133,6 @@
         <div class="shake">
           <img src="./images/shake.png" class="shakeHand" />
         </div>
-        <audio src="./media/shake.mp3" preload class="shakingAudio" id="shakingAudio" ></audio>
       </div>
       <!-- 签文页 -->
       <div class="page page2">
