--- a/src/metro/home.html
+++ b/src/metro/home.html
@@ -27,6 +27,8 @@
 </head>
   <body>
     <div class="container">
+      <!-- 加载页之前 -->
+      <div class="page loadBefore"></div>
       <!-- 加载页 -->
       <div class="page loading">
         <div class="firelantern animated pulse infinite">
@@ -142,12 +144,9 @@
       <!-- 签文页 -->
       <div class="page page2">
         <div class="signBox">
-          <img src="./images/signBg.png" class="signBg" />
+          <img src="./images/signBg1.png" class="signBg" />
           <div class="signTitle">
               <img src="./images/signTitle.png" />
-          </div>
-          <div class="keyword">
-              <img src="./images/keyword1.png" />
           </div>
           <div class="guide">
             <div class="tip animated pulse infinite">
