--- a/src/metro/index.html
+++ b/src/metro/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <!-- 背景音乐 -->
       <div id="audio_btn" class="video_exist rotate">
-        <audio loop="" autoplay="" src="./media/music.mp3" id="bgMusic" preload=""></audio>
+        <audio loop="" autoplay="" src="./media/music1.mp3" id="bgMusic" preload=""></audio>
       </div>
       <!-- 加载页之前 -->
       <div class="page loadBefore"></div>
@@ -158,14 +158,14 @@
               <img src="./images/signTitle.png" />
           </div>
           <div class="guide">
-            <div class="tip animated pulse infinite">
-                <img src="./images/tip.png" />
+            <div class="tip">
+                <img src="./images/tip.png" class="animated pulse infinite"/>
             </div>
             <div class="btns">
-              <a id="receive" class="receive animated bounceInUp">
+              <a id="receive" class="receive animated fadeIn">
                   <img src="./images/btn1.png" />
               </a>
-              <a id="share" class="share animated bounceInUp">
+              <a id="share" class="share animated fadeIn">
                 <img src="./images/btn2.png" />
               </a>
             </div>
@@ -177,7 +177,7 @@
           </div>
         </div>
         <div class="synthesis" id="synthesis">
-          <img src="./images/result1.png" />
+          <img src="" />
         </div>
       </div>
       <!-- 遮罩层 -->
@@ -188,8 +188,8 @@
     <script src="./js/jquery-1.11.0.min.js"></script>
     <script src="./js/preloadjs-0.6.2.min.js"></script>
     <script src="./js/qrcode.min.js"></script>
-    <script src="./js/api.js"></script>
-    <script src="./js/hammer.min.js"></script>
+    <!-- <script src="./js/api.js"></script> -->
+    <!-- <script src="./js/hammer.min.js"></script> -->
     <!--微信分享-->
     <script src="http://h5.zegelo.com/Themes/js/WeiXin.js"></script>
     <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
