--- a/src/metro/index.html
+++ b/src/metro/index.html
@@ -188,8 +188,8 @@
     <script src="./js/jquery-1.11.0.min.js"></script>
     <script src="./js/preloadjs-0.6.2.min.js"></script>
     <script src="./js/qrcode.min.js"></script>
-    <!-- <script src="./js/api.js"></script> -->
-    <!-- <script src="./js/hammer.min.js"></script> -->
+    <script src="./js/api.js"></script>
+    <script src="./js/hammer.min.js"></script>
     <!--微信分享-->
     <script src="http://h5.zegelo.com/Themes/js/WeiXin.js"></script>
     <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
