--- a/src/metro/index.html
+++ b/src/metro/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <title>麦德龙</title>
-  <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="css/index.css">
   <script>
     (function (window, document) {
       var setRem = function() {
@@ -28,42 +28,42 @@
   <body>
     <div class="container">
       <!-- 背景音乐 -->
-      <div id="audio_btn" class="video_exist rotate">
-        <audio loop="" autoplay="" src="./media/music1.mp3" id="bgMusic" preload=""></audio>
+      <div id="audio_btn" class="video_exist">
+        <audio loop="" src="media/music1.mp3" id="bgMusic" preload=""></audio>
       </div>
       <!-- 加载页之前 -->
       <div class="page loadBefore"></div>
       <!-- 加载页 -->
       <div class="page loading">
         <div class="firelantern animated pulse infinite">
-          <img src="./images/firelantern.png" />
+          <img src="images/firelantern.png" />
         </div>
         <div class="confetti1 animated flash infinite">
-            <img src="./images/confetti1.png" />
+            <img src="images/confetti1.png" />
         </div>
         <div class="snowmanDog">
-            <img src="./images/snowmanDog.png" />
+            <img src="images/snowmanDog.png" />
         </div>
         <div class="confetti2 animated flash infinite">
-            <img src="./images/confetti2.png" />
+            <img src="images/confetti2.png" />
         </div>
         <div class="word1">
-            <img src="./images/word1.png" />
+            <img src="images/word1.png" />
         </div>
         <div class="television">
-            <img src="./images/television1.png" id="television" />
+            <img src="images/television1.png" id="television" />
             <div class="play" id="play">
-              <img src="./images/play.png" />
+              <img src="images/play.png" />
             </div>
         </div>
         <div class="loadingBox">
           <div class="loadingGroup">
             <div class="loadingWrap">
               <div class="loadingBg">
-                  <img src="./images/loadingBg.png" />
+                  <img src="images/loadingBg.png" />
               </div>
               <div class="progressbar" id="progressbar" >
-                  <img src="./images/progressbar.png" />
+                  <img src="images/progressbar.png" />
               </div>
             </div>
           </div>
@@ -72,124 +72,123 @@
       </div>
       <!-- <div class="page videoPage">
           <canvas id="testCanvas" style="width: 100%;" style="display:none"></canvas>
-          <video style="display: none;" id="testVideo" poster="./images/acer.png" src="./media/video.mp4" preload="auto" x-webkit-airplay="true" webkit-playsinline="webkit-playsinline" playsinline="playsinline" x5-video-player-type="h5" x5-video-player-fullscreen="true"></video>
+          <video style="display: none;" id="testVideo" poster="images/acer.png" src="media/video.mp4" preload="auto" x-webkit-airplay="true" webkit-playsinline="webkit-playsinline" playsinline="playsinline" x5-video-player-type="h5" x5-video-player-fullscreen="true"></video>
       </div> -->
       <!-- 音频视频 -->
       <div class="page media">
-          <video poster="./images/poster.png" class="video" id="video" preload="auto" x5-video-player-type="h5" x5-video-player-fullscreen="true" x5-video-orientation="portraint" x-webkit-airplay="true" webkit-playsinline="true" playsinline="true">
-            <source src="./media/video.mp4" type="video/mp4" />
+          <video poster="images/poster.png" class="video" id="video" preload="auto" x5-video-player-type="h5" x5-video-player-fullscreen="true" x5-video-orientation="portraint" x-webkit-airplay="true" webkit-playsinline="true" playsinline="true">
+            <source src="media/video.mp4" type="video/mp4" />
           </video>
-          <!-- <video src="./media/video.mp4" preload class="video" id="video"></video> -->
-          <!-- <video src="./media/video.mp4" preload class="video" id="video" x-webkit-airplay="true" webkit-playsinline="webkit-playsinline" playsinline="playsinline" x5-video-player-type="h5" x5-video-player-fullscreen="true"></video> -->
+          <!-- <video src="media/video.mp4" preload class="video" id="video"></video> -->
+          <!-- <video src="media/video.mp4" preload class="video" id="video" x-webkit-airplay="true" webkit-playsinline="webkit-playsinline" playsinline="playsinline" x5-video-player-type="h5" x5-video-player-fullscreen="true"></video> -->
           <audio preload class="shakingAudio" id="shakingAudio" >
-            <source src="./media/shake.mp3" type="audio/mpeg">
+            <source src="media/shake.mp3" type="audio/mpeg">
           </audio>
       </div>
       <!-- 首页 -->
       <div class="page page1">
         <!-- 云 -->
         <div class="lamp">
-          <img src="./images/lamp.png" />
+          <img src="images/lamp.png" />
         </div>
         <!-- 烟花 -->
         <div class="fireworks animated fadeIn infinite">
-          <img src="./images/fireworks.png" />
+          <img src="images/fireworks.png" />
         </div>
         <!-- 新年字 -->
         <div class="newyear">
-          <img src="./images/newyear.png" />
+          <img src="images/newyear.png" />
         </div>
         <!-- 云1 -->
         <div class="cloud1">
-          <img src="./images/cloud1.png" />
+          <img src="images/cloud1.png" />
         </div>
         <!-- 云2 -->
         <div class="cloud2">
-          <img src="./images/cloud2.png" />
+          <img src="images/cloud2.png" />
         </div>
         <!-- 雪花 -->
         <div class="snowflake animated fadeIn infinite">
-          <img src="./images/snowflake.png" />
+          <img src="images/snowflake.png" />
         </div>
         <!-- 雪 -->
         <div class="snow">
-          <img src="./images/snow.png" />
+          <img src="images/snow.png" />
         </div>
         <!-- 鞭炮1 -->
         <div class="firecrackers1">
-          <img src="./images/firecrackers1.png" />
+          <img src="images/firecrackers1.png" />
         </div>
         <!-- 鞭炮2 -->
         <div class="firecrackers2 animated fadeIn infinite">
-          <img src="./images/firecrackers2.png" />
+          <img src="images/firecrackers2.png" />
         </div>
         <!-- 红包 -->
         <div class="redbag">
-          <img src="./images/redbag.png" />
+          <img src="images/redbag.png" />
         </div>
         <!-- 狗1 -->
         <div class="dog1">
-          <img src="./images/dog1.png" />
+          <img src="images/dog1.png" />
         </div>
         <!-- 抽签 -->
         <div class="draw">
           <div class="draw1">
               <div class="lotpotGroup">
-                <img src="./images/lotpot.png" class="lotpot" />
-                <img src="./images/sign1.png" class="sign1" />
-                <img src="./images/sign2.png" class="sign2" />
+                <img src="images/lotpot.png" class="lotpot" />
+                <img src="images/sign1.png" class="sign1" />
+                <img src="images/sign2.png" class="sign2" />
               </div>
               <div class="sign3">
-                <img src="./images/sign3.png" />
+                <img src="images/sign3.png" />
               </div>
               <div class="light">
-                <img src="./images/light.png" />
+                <img src="images/light.png" />
               </div>
               <div class="sign4">
-                <img src="./images/sign4.png" />
+                <img src="images/sign4.png" />
               </div>
           </div>
-          <!-- <img src="./images/draw1.png" class="draw1" /> -->
-          <img src="./images/projection.png" class="projection" />
+          <img src="images/projection.png" class="projection" />
         </div>
         <!-- 狗2 -->
         <div class="dog2">
-          <img src="./images/dog2.png" />
-          <img src="./images/acer.png" class="acer" />
+          <img src="images/dog2.png" />
+          <img src="images/acer.png" class="acer" />
         </div>
         <!-- 雪人 -->
         <div class="snowman">
-          <img src="./images/snowman.png" />
+          <img src="images/snowman.png" />
         </div>
         <!-- 摇一摇 -->
         <div class="shake animated swing infinite">
-          <img src="./images/shake.png" class="shakeHand" />
+          <img src="images/shake.png" class="shakeHand" />
         </div>
       </div>
       <!-- 签文页 -->
       <div class="page page2">
         <div class="signBox">
-          <img src="./images/signBg1.png" class="signBg" id="signBg" />
+          <img src="images/signBg1.png" class="signBg" id="signBg" />
           <div class="signTitle">
-              <img src="./images/signTitle.png" />
+              <img src="images/signTitle.png" />
           </div>
           <div class="guide">
             <div class="tip">
-                <img src="./images/tip.png" class="animated pulse infinite"/>
+                <img src="images/tip.png" class="animated pulse infinite"/>
             </div>
             <div class="btns">
               <a id="receive" class="receive">
-                  <img src="./images/btn1.png" />
+                  <img src="images/btn1.png" />
               </a>
               <a id="share" class="share">
-                <img src="./images/btn2.png" />
+                <img src="images/btn2.png" />
               </a>
             </div>
           </div>
           <div class="qrcodes">
               <!-- 生成二维码 -->
               <div class="qrcode"></div>
-              <img src="./images/word2.png" class="word2" />
+              <img src="images/word2.png" class="word2" />
           </div>
         </div>
         <div class="synthesis" id="synthesis">
@@ -198,18 +197,18 @@
       </div>
       <!-- 遮罩层 -->
       <div class="cover">
-        <img src="./images/share.png" class="share" />
+        <img src="images/share.png" class="share" />
       </div>
     </div>
-    <script src="./js/jquery-1.11.0.min.js"></script>
-    <script src="./js/preloadjs-0.6.2.min.js"></script>
-    <script src="./js/soundjs-0.6.2.min.js"></script>
-    <script src="./js/qrcode.min.js"></script>
-    <script src="./js/api.js"></script>
-    <script src="./js/hammer.min.js"></script>
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <script src="js/preloadjs-0.6.2.min.js"></script>
+    <script src="js/soundjs-0.6.2.min.js"></script>
+    <script src="js/qrcode.min.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/hammer.min.js"></script>
     <!--微信分享-->
     <script src="http://h5.zegelo.com/Themes/js/WeiXin.js"></script>
     <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
-    <script src="./js/home.js"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
