--- a/src/metro/share.html
+++ b/src/metro/share.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>麦德龙</title>
+    <title>摇出你的2018幸运签</title>
     <link rel="stylesheet" href="./css/index.css">
     <script>
         (function (window, document) {
